@@ -1,3 +1,8 @@
+2007-02-01 Raphael Neider <rneider AT web.de>
+
+	* src/pic/glue.c (picglue,emitSymbolSet,showAllMemmaps): emit the
+	    config words again
+
 2007-01-31 Borut Razem <borut.razem AT siol.net>
 
 	* support/Util/dbuf_string.h: added ATTRIBUTE_PRINTF to dbuf_printf()
